@@ -3,6 +3,8 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
           - add test requirement on the minimal Config::MVP needed to handle
             an edge case that we test our handling of
+          - new -default config option, instructing CPAN clients to install
+            the features when running non-interactively
 
 0.005     2013-09-02 23:53:12Z (Karen Etheridge)
           - no longer setting dynamic_config => 1 -- it is generally the CPAN
